# blogtix

./: .env.example  .gitignore  Cargo.toml  README.md  foo.rs
assets/html/: article.html  default.html  editing_article.html
assets/md/: 400.md  400_article.md  400_page.md  401.md  500.md  about.md
assets/sql/: schema.sql
scripts/: build.py  db.py  setup.py
sql/: add_article.sql  add_author.sql  schema.sql
src/: article_edit.js  config.rs  db.rs  errors.rs  files.rs  handlers.rs  lib.rs  main.js  main.rs  main.sass  models.rs
static/: main.min.css  main.min.js
