[package]
name = "rusty_blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0-rc.1"
actix-files = "0.6.0-beta.16"
config = "0.11.0"
deadpool-postgres = { version = "0.10.1", features = ["serde"] }
derive_more = "0.99.2"
dotenv = "0.15.0"
serde = { version = "1.0.136", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version="0.7.5", features=["with-chrono-0_4" ]}
chrono = { version = "0.4.19",  features = ["serde"] }
pulldown-cmark = "0.9.0"
regex = "1.5.4"
log = "0.4.14"